automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,9 @@
    },
    "outputs": [],
    "source": [
-    "countries.append(\"\") # add code here"
+    "countries.append(\"Malta\") \n",
+    "\n",
+    "# add code here"
    ]
   },
   {
