--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = set()"
+    "unique_countries = set(countries)"
    ]
   },
   {
