--- a/index.ipynb
+++ b/index.ipynb
@@ -438,13 +438,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = set(countries)\n",
+    "unique_countries"
    ]
   },
   {
